# Kime

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml  release.yml
.kilo/: agent-manager.json
.kilo/worktrees/chivalrous-bromine/: gradle.properties
.kilo/worktrees/chivalrous-bromine/app/: build.gradle.kts
.kilo/worktrees/chivalrous-bromine/app/src/main/: AndroidManifest.xml
.kilo/worktrees/chivalrous-bromine/app/src/main/assets/rime/: default.yaml  wubi86_pinyin.schema.yaml
.kilo/worktrees/chivalrous-bromine/app/src/main/java/com/kingzcheung/kime/: MainActivity.kt
.kilo/worktrees/chivalrous-bromine/app/src/main/java/com/kingzcheung/kime/rime/: RimeConfigHelper.kt  RimeEngine.kt
.kilo/worktrees/chivalrous-bromine/app/src/main/java/com/kingzcheung/kime/service/: KimeInputMethodService.kt
.kilo/worktrees/chivalrous-bromine/app/src/main/java/com/kingzcheung/kime/ui/: CandidateBar.kt  KeyButton.kt  KeyboardLayout.kt  KeyboardView.kt  SymbolKeyboardLayout.kt
.kilo/worktrees/chivalrous-bromine/app/src/main/jni/: CMakeLists.txt
.kilo/worktrees/chivalrous-bromine/app/src/main/jni/librime_jni/: rime_jni.cc
.kilo/worktrees/chivalrous-bromine/app/src/main/res/values/: strings.xml
.kilo/worktrees/chivalrous-bromine/app/src/test/java/com/kingzcheung/kime/: ExampleUnitTest.kt
.kilo/worktrees/chivalrous-bromine/gradle/: gradle-daemon-jvm.properties  libs.versions.toml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/kingzcheung/kime/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: kime.keys.yaml  readme.md
app/src/main/assets/rime/: README.md  default.yaml  pinyin_simp.schema.yaml  wubi86.dict.yaml  wubi86.schema.yaml  wubi86_pinyin.schema.yaml
app/src/main/java/com/kingzcheung/kime/: MainActivity.kt
app/src/main/java/com/kingzcheung/kime/association/: AssociationCandidate.kt  AssociationEngine.kt  AssociationManager.kt  AssociationModelHelper.kt  ModelDownloadManager.kt  NgramFusionEngine.kt  NgramTrie.kt  OnnxAssociationEngine.kt  UserNgramCache.kt
app/src/main/java/com/kingzcheung/kime/clipboard/: ClipboardManager.kt
app/src/main/java/com/kingzcheung/kime/plugin/: ExtensionLoader.kt  ExtensionManager.kt
app/src/main/java/com/kingzcheung/kime/plugin/builtin/: BuiltinExtensionFactory.kt  SpeechToTextExtension.kt
app/src/main/java/com/kingzcheung/kime/rime/: RimeConfigHelper.kt  RimeEngine.kt
app/src/main/java/com/kingzcheung/kime/service/: KimeInputMethodService.kt
app/src/main/java/com/kingzcheung/kime/settings/: DictionaryHelper.kt  SchemaConfigHelper.kt  SchemaInfo.kt  SettingsPreferences.kt
app/src/main/java/com/kingzcheung/kime/ui/: AboutScreen.kt  AssociationSettingsScreen.kt  CandidateBar.kt  CandidatePage.kt  ClipboardView.kt  EmojiKeyboardLayout.kt  KeyButton.kt  KeyboardDimensions.kt  KeyboardLayout.kt  KeyboardMode.kt  KeyboardView.kt  KeysConfigHelper.kt  MenuBar.kt  NumberKeyboardLayout.kt  PluginsSettingsScreen.kt  SettingsComponents.kt  SettingsScreen.kt  SpaceKeyButton.kt  SubcharHelper.kt  SwipeBubble.kt  SymbolKeyboardLayout.kt
app/src/main/java/com/kingzcheung/kime/ui/theme/: Color.kt  KeyboardTheme.kt  Theme.kt
app/src/main/java/com/kingzcheung/kime/util/: FileLogger.kt
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/cmake/: FindBoost.cmake  FindOpencc.cmake  OpenccWorkarounds.cmake
app/src/main/jni/librime_jni/: CMakeLists.txt  rime_jni.cc
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_logo.xml  logo.xml  logo_dark.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: filepaths.xml  method.xml
docs/: ASSOCIATION.md  BUILD_GUIDE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_GUIDE.md  使用文档.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
plugin-api/: build.gradle.kts  consumer-rules.pro
plugin-api/src/main/: AndroidManifest.xml
plugin-api/src/main/java/com/kingzcheung/kime/plugin/api/: EmojiPlugin.kt  ExtensionInput.kt  ExtensionResult.kt  ExtensionType.kt  KimeExtension.kt  KimeExtensionFactory.kt  PluginFactory.kt  PluginMetadata.kt  PluginType.kt  PredictionPlugin.kt  SpeechPlugin.kt
plugins/emoji-sticker/: .gitignore  build.gradle.kts  proguard-rules.pro
plugins/emoji-sticker/src/main/: AndroidManifest.xml  proguard-rules.pro
plugins/emoji-sticker/src/main/java/com/kingzcheung/kime/plugin/emoji/: EmojiPluginFactory.kt  EmojiStickerPlugin.kt  PluginDeclaration.kt  PluginSettingsActivity.kt
plugins/emoji-sticker/src/main/java/com/kingzcheung/kime/plugin/emoji/ui/: EmojiSettingsScreen.kt
plugins/emoji-sticker/src/main/res/values/: strings.xml
plugins/kaomoji/: .gitignore  build.gradle.kts  proguard-rules.pro
plugins/kaomoji/src/main/: AndroidManifest.xml  proguard-rules.pro
plugins/kaomoji/src/main/java/com/kingzcheung/kime/plugin/kaomoji/: KaomojiData.kt  KaomojiPlugin.kt  KaomojiPluginFactory.kt  PluginDeclaration.kt  PluginSettingsActivity.kt
plugins/kaomoji/src/main/java/com/kingzcheung/kime/plugin/kaomoji/ui/: KaomojiSettingsScreen.kt
plugins/kaomoji/src/main/res/values/: strings.xml
plugins/prediction-onnx/: .gitignore  build.gradle.kts  download-onnx.ps1  download-onnx.sh  proguard-rules.pro
plugins/prediction-onnx/src/main/: AndroidManifest.xml
plugins/prediction-onnx/src/main/assets/: .gitignore  manifest.json
plugins/prediction-onnx/src/main/cpp/: CMakeLists.txt  onnx_jni.cc
plugins/prediction-onnx/src/main/java/com/kingzcheung/kime/plugin/prediction/: OnnxPredictionPlugin.kt  PluginDeclaration.kt  PluginSettingsActivity.kt  PredictionPluginFactory.kt
plugins/prediction-onnx/src/main/java/com/kingzcheung/kime/plugin/prediction/ui/: PredictionSettingsScreen.kt
plugins/prediction-onnx/src/main/res/values/: strings.xml
(+6 files in other folders)
